css: Log In, Sign Up 페이지 css 적용 및 html 수정

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -154,6 +154,19 @@ button {
   border-radius: 3px; 
 }
 
+.button--google {
+  padding: 10px 14px; 
+  font-weight: 500;
+  background-color: var(--white);
+  color: var(--dark-gray-1);
+  border: 1px solid var(--light-gray-4);
+  border-radius: 3px;
+}
+
+.button--google:hover {
+  background-color: var(--light-gray-1);
+}
+
 .button--default:hover {
   background-color: var(--light-gray-3);
 }
