css: info window css 수정

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -236,10 +236,14 @@ a:hover {
   position: fixed !important;
 }
 
+.poi-info-window div, .poi-info-window a {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+}
+
 .gm-style .gm-style-iw-c {
   padding: var(--spacing-3) !important;
   min-width: 300px !important;
-  max-width: 450px !important;
+  max-width: 400px !important;
 }
 
 .gm-ui-hover-effect {
