css: 게시글 페이지 지도 css 수정

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -286,3 +286,7 @@ a:hover {
   color: var(--primary-blue) !important;
   text-decoration: none !important;
 }
+
+#board-map {
+  position: fixed !important;
+}
