--- a/client/src/index.css
+++ b/client/src/index.css
@@ -290,3 +290,31 @@ a:hover {
 #board-map {
   position: fixed !important;
 }
+
+.header__logo {
+    cursor: pointer;
+    font-size: 13px;
+    padding: 10px 14px;
+    border-radius: 3px;
+}
+
+.header__logo:hover{
+background-color: var(--light-gray-3);
+}
+
+.logo__image {
+  margin-top: 5px;
+    width: 50px;
+    height: 50px;
+    padding: 5px;
+    cursor: pointer;
+    margin-right: -10px;
+}
+
+.logo__image:hover{
+  filter: drop-shadow(4px 3px 3px var(--primary-blue-light-2));
+}
+
+.back__button {
+  background-color: var(--light-gray-2)
+}
