--- a/client/src/index.css
+++ b/client/src/index.css
@@ -67,7 +67,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: var(--default-text-size);
   line-height: var(--default-text-line-height);
   color: var(--dark-gray-2);
@@ -236,8 +237,10 @@ a:hover {
   position: fixed !important;
 }
 
-.poi-info-window div, .poi-info-window a {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+.poi-info-window div,
+.poi-info-window a {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
 }
 
 .gm-style .gm-style-iw-c {
@@ -292,29 +295,29 @@ a:hover {
 }
 
 .header__logo {
-    cursor: pointer;
-    font-size: 13px;
-    padding: 10px 14px;
-    border-radius: 3px;
+  cursor: pointer;
+  font-size: 13px;
+  padding: 10px 14px;
+  border-radius: 3px;
 }
 
-.header__logo:hover{
-background-color: var(--light-gray-3);
+.header__logo:hover {
+  background-color: var(--light-gray-3);
 }
 
 .logo__image {
   margin-top: 5px;
-    width: 50px;
-    height: 50px;
-    padding: 5px;
-    cursor: pointer;
-    margin-right: -10px;
+  width: 50px;
+  height: 50px;
+  padding: 5px;
+  cursor: pointer;
+  margin-right: -10px;
 }
 
-.logo__image:hover{
+.logo__image:hover {
   filter: drop-shadow(4px 3px 3px var(--primary-blue-light-2));
 }
 
 .back__button {
-  background-color: var(--light-gray-2)
+  background-color: var(--light-gray-2);
 }
