--- a/client/src/index.css
+++ b/client/src/index.css
@@ -207,6 +207,14 @@ button {
   background-color: var(--light-gray-3);
 }
 
+.button--logs {
+  color: #10619f;
+  font-size: 25px;
+  letter-spacing: 2px;
+  margin-top: 15px;
+  font-family: KyoboHandwriting2021sjy;
+}
+
 a {
   color: var(--primary-blue-dark);
   text-decoration: none;
@@ -291,28 +299,32 @@ a:hover {
   position: fixed !important;
 }
 
-.header__logo {
-    cursor: pointer;
-    font-size: 13px;
-    padding: 10px 14px;
-    border-radius: 3px;
+@font-face {
+  font-family: 'KyoboHandwriting2021sjy';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/KyoboHandwriting2021sjy.woff2') format('woff2');
+  font-weight:bold;
+  font-style: normal;
 }
 
-.header__logo:hover{
-background-color: var(--light-gray-3);
+.header__logo {
+  cursor: pointer;
+  font-size: 30px;
+  letter-spacing: 2px;
+  color: #10619f;
+  padding-top:30px;
+  border-radius: 3px;
+  font-family: KyoboHandwriting2021sjy;
+  -webkit-text-stroke: 2px #10619f;
 }
 
 .logo__image {
   margin-top: 5px;
-    width: 50px;
-    height: 50px;
-    padding: 5px;
-    cursor: pointer;
-    margin-right: -10px;
-}
-
-.logo__image:hover{
-  filter: drop-shadow(4px 3px 3px var(--primary-blue-light-2));
+  width: 60px;
+  height: 60px;
+  padding: 5px;
+  padding-right: 0;
+  cursor: pointer;
+  margin-right: -10px;
 }
 
 .back__button {
